--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,17 @@
-# Игнорируем все, кроме специфичных файлов проекта и исходного кода
+# Игнорируем все файлы и папки по умолчанию
 *
 
-# Исключаем файлы проекта из игнорирования
-!/.cproject
-!/.project
-!/*.ioc
-!/*.ld
+# Исключаем указанные папки из игнорирования
+!/CMSIS/
+!/CMSIS/**
+!/Core/
+!/Core/**
+!/Documents/
+!/Documents/**
+!/Startup/
+!/Startup/**
 
-# STM32CubeIDE
-.metadata/
-.settings/
-*.launch
-
-# Дополнительные настройки
-# Игнорируем временные файлы и папки
-*.tmp
-*.bak
-*.swp
-*~.*
-
-# Игнорируем компилированные бинарные файлы
-*.elf
-*.bin
-*.hex
-*.map
-
-# Игнорируем каталоги сборки и выходные каталоги
-build/
-Debug/
-Release/
-
-# Игнорируем временные файлы, создаваемые системой
-.DS_Store
-Thumbs.db
-
-# Игнорируем личные настройки IDE
-.vscode/
-.idea/
-*.code-workspace
-
-# Исключаем файлы настроек
+# Дополнительно
+# Исключаем файлы настроек и конфигураций из игнорирования
 !.gitignore
 !.gitattributes
