--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@
 
 # Дополнительно
 # Исключаем файлы настроек и конфигураций из игнорирования
+!.project
+!.cproject
+
 !.gitignore
 !.gitattributes
