--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !/Documents/**
 !/Startup/
 !/Startup/**
+!/Outputs/
+!/Outputs/**
 
 # Дополнительно
 # Исключаем файлы настроек и конфигураций из игнорирования
