--- a/.cproject
+++ b/.cproject
@@ -45,6 +45,10 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.891153027" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/CMSIS/Inc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Core/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Modules/ADC/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Modules/FRAM/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Modules/PKM/Inc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/Modules/USART/Inc}&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1094906430" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -71,9 +75,13 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Core|CMSIS|Core/Src|Core/Module_UART/Src|Core/Memory/Src|Core/Module_ADC/Src|Core/Module_FRAM/Src|Core/Module_PKM/Src|Core/Module_RTC/Src|Core/main/Src|CMSIS/Src|Startup" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Modules/ADC|Modules/FRAM|Modules/PKM|Modules/USART|Core|CMSIS|Core/Src|Core/Module_UART/Src|Core/Memory/Src|Core/Module_ADC/Src|Core/Module_FRAM/Src|Core/Module_PKM/Src|Core/Module_RTC/Src|Core/main/Src|CMSIS/Src|Startup" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="CMSIS"/>
 						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Core"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules/ADC"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules/FRAM"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules/PKM"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Modules/USART"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
